# purplOS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  patch_cloud_bins.sh
.github/workflows/: make_victor.yml
3rd/acapela/AcapelaTTS_for_Mac_V9.450/: libacatts.dylib
3rd/aubio/mac/lib/: libaubio.5.4.8.dylib
3rd/aubio/vicos/lib/: libaubio.so.5.4.8
3rd/avs-device-sdk/mac/lib/: libACL.dylib  libADSL.dylib  libAFML.dylib  libAIP.dylib  libAVSCommon.dylib  libAVSSystem.dylib  libAlerts.dylib  libAudioPlayer.dylib  libAudioResources.dylib  libBluetooth.dylib  libCBLAuthDelegate.dylib  libCapabilitiesDelegate.dylib  libCertifiedSender.dylib  (+21 more)
3rd/opencv/: ANKI_VERSION
3rd/picovoice/x86_64-linux/: .gitignore  README.md  create-model.sh
animProcess/: CMakeLists.txt
animProcess/src/bootAnim/: bootAnim.cpp
animProcess/src/cozmoAnim/: connectionFlow.cpp
cannedAnimLib/proceduralFace/: proceduralFace.cpp  proceduralFace.h  proceduralFaceDrawer.cpp  proceduralFaceDrawer.h
cloud/: BUILD.in  CMakeLists.txt  go.mod  go.sum
cloud/cloud/: main.go
cloud/gateway/: main.go  message_handler.go  tokens.go
cmake/: gen-version.cmake  license.cmake  macosx.toolchain.cmake  picovoice.cmake  vicos-sdk-stl-config.cmake  vicos.oelinux.toolchain.cmake  vicos_strip.cmake
coretech/neuralnets/: CMakeLists.txt  neuralNetModel_tflite.cpp  neuralNetModel_tflite.h
coretech/planning/tools/: perf.sh
coretech/vision/engine/: image.cpp  image_fwd.h  markerDetector.cpp
coretech/vision/shared/: MarkerCodeDefinitions.h
cubeBleClient/: cubeBleClient.h
cubeBleClient/bleClient/: bleClient.h
dasmgr/: dasManager.cpp
docker/: Dockerfile  Dockerfile-mess.dev  build-v.sh
engine/: petWorld.cpp  robot.cpp  robotToEngineImplMessaging.cpp
engine/aiComponent/behaviorComponent/: behaviorFactory.cpp  behaviorsBootLoader.cpp  heldInPalmTracker.cpp  userIntentComponent.cpp  userIntentComponent.h
engine/components/: robotHealthReporter.cpp  settingsCommManager.cpp  settingsManager.cpp  visionComponent.cpp
engine/components/sensors/: proxSensorComponent.cpp
engine/receptiveSocialPresenceEstimator/: socialPresenceEstimator.cpp
engine/tools/engined/: cozmoEngineMain.cpp
engine/vision/: visionModesHelpers.cpp
lib/anki-ble/common/: strlcpy.h
lib/audio/build-scripts/: create-audio-assets-pr.sh
lib/audio/gyp/: configure.sh  decompressAudioLibs.sh
lib/audio/tools/: WWiseGenerateSoundBanks.sh  build-android.sh  compressAudioLibs.sh  copyWWiseSDKsIntoProject.sh  printGypLibStr.sh
lib/audio/wwise/: clean-wwise-unused-libs.sh  fetch-wwise.sh
lib/das-client/tools/: buildAll.sh
ota/: cfw.sh  make.sh
ota/ota-server/: main.go
patch-libs/: libcrypto.so.1.0.0  libcurl.so.4  libnghttp2.so.14  libssl.so.1.0.0  libunwind.so.0
platform/: CMakeLists.txt
platform/config/: CMakeLists.txt
platform/diagnostics-logger/: diagnostics-logger
platform/faultCodeDisplay/: faultCodeDisplay.cpp
platform/gpio/: gpio.c
platform/switchboard/switchboardd/: rtsHandlerV5.cpp
platform/update-engine/: error-codes.md  update-engine.py
platform/victorCrashReports/: tombstoneHooks.cpp
project/build-scripts/: clean.sh  cmake-launch-c.in  cmake-launch-cxx.in  create-audio-assets-pr.sh  exportCSharpClad.sh  update_version.sh  upload-to-hockeyapp.sh
project/build-scripts/webots/: run-sdk-webots-tests.sh
project/build-server/: build_env.sh
project/buildScripts/: binary_conversion.py  dependencies.py
project/buildServer/steps/: configure.sh  publishLicenses.sh  pullRequest.sh  zipDeployables.sh
project/doxygen/: post_doxygen.sh
project/victor/: build-victor.sh
project/victor/scripts/: addr2line.sh  build_maya_wwise_plugin.sh  configure_webots_viz.sh  deploy.sh  deploy_build_artifacts.sh  dump-syms.sh  dvt2_fake_factory.sh  fetch-build-deps.linux.sh  fetch-build-deps.mac.sh  fetch-build-deps.sh  get-dev-images.sh  install.sh  prune-dir.sh  reset-data-collection-robot.sh  show-cpu-freq.sh  stage.sh  systemctl.sh  vicos_which.sh  victor_build_debug.sh  victor_build_debugo2.sh  victor_build_release.sh  victor_env.sh  victor_fix_permissions.sh  victor_log.sh  victor_log_lnav.sh  victor_start.sh  wipe-dev-images.sh
pv_ipc/: .gitignore  README.md  vic-build.sh
python/behaviors/: lookAroundSafeRegion.py
resources/: BUILD.in
resources/assets/cladToFileMaps/: AnimationTriggerMap.json  BackpackAnimationTriggerMap.json
resources/beta/config/: server_config.json
resources/config/engine/: eye_color_config.json  settings_config.json  tts_config.json  vision_config.json
resources/escapepod/config/: DASConfig.json
resources/shipping/config/: DASConfig.json  server_config.json
resources/speech-recognition/picovoice/: hey_cosmo.ppn  hey_vector.ppn
resources/webserver/: webViz.html
robot/: convert_projx_to_uv4.sh  vmake.sh
robot/core/src/: lcd.c
robot/fixture/stm/: fixture_release.sh
robot/fixture/tools/: logparse_cube1.sh  release_tools.sh
robot/hal/src/: hal.cpp
robot/supervisor/src/: backpackLightController.cpp  pickAndPlaceController.cpp
robot/syscon/: publickeygen.sh
robot/syscon/boot/: analog.cpp
simulator/: kill_ipcs.sh
snowboy/: sb_serv.cpp
tools/: installLibimobiledevice.command
tools/ai/: listUsedAnimations.sh  playOnboarding.py  plotBehaviorTree.sh
tools/android/: aarUnityRemoval.sh  apkSplashScreenFix.sh  logcatAllDevices.sh
tools/crash-tools/: get-callstack.sh
tools/crash-tools/linux/: copyDmpsFromRobot.sh  copyFullBinariesToVM.sh  copySymsFromVM.sh  makeSyms.sh
tools/debug/: autoDebugAnim.sh  autoDebugEngine.sh  openCurrLog.sh  tailCurrLog.sh
tools/json/: checkResourceJson.sh
tools/perfmetric/: autoPerfMetric.sh
tools/protobuf/plugin/: make-arm-mac.sh  make.sh
tools/rsync/: rsyncd.service
tools/smartling/: smartling-pull.sh  smartling-push.sh
tools/smartling/bash/: common.sh  delete.sh  download-glossary.sh  download-tmx.sh  download.sh  globals.sh  settings.sh  upload.sh
tools/smartling/build-steps/: slack-smartling-pull.sh  slack-smartling-push.sh
tools/versionGenerator/: versionGenerator.sh
wire/: build.sh
(+257 files in other folders)
